Changes made between Gamera File Releases
=========================================

 - prelimary version of Delaunay triangulation delaunay_from_points
   (TODO: collinear edge resolution)


Version 3.2.5, Apr 14, 2010
----------------------------

 - CIE L*a*b* values can be queried from RGBPixels

 - new plugin trim_image (category "Utilities")

 - new plugins kfill and kfill_modified (category "Filter")

 - rank and mean now allow larger window sizes than 3x3
   and an optional border treatment (clip or reflect)

 - runlength_smearing and projection_cutting now also work
   on views with non zero offset

 - computation of some features corrected:
    o nholes (white rows/cols made whole count negative)
    o nholes_extended (normalization for scale invariance was missing)
    o compactness (border pixels were formerly ignored in computation)
    o skeleton_features (crossings through x/y-axis was erronously computed)
    o volume[16|64]regions (zones occasionally not covered entire images)
    o moments (no longer overflow errors on larger glyphs)
    o Zernike moments now have the desired invariance properties

 - new Python image methods white() and black() for obtaining
   these colors in the pixel type representation of the image

 - should now also compile on MacOS X 10.6 out-of-the-box

 - changes for 64bit architecture:
    o default range of Int, Real, Point made smaller than sys.maxint
    o writing TIFFs corrected

 - necessary changes for libpng 1.4.0 with #if's on PNG_LIBPNG_VER


Version 3.2.4, Feb 12, 2010
----------------------------

 - new deformation plugins degrade_kanungo and white_speckles

 - new plugins colors_to_labels (category "Color") and
   ccs_from_labeled_image (category "Utility") for reading
   manually labeled ground truth data (thanks to Hasan Yilidz)

 - corrected border treatment in neighbor.hpp (affected mean
   and rank) and fixed another error in the rank filter

 - plugin category cleanup: